--- a/public/stage/_index.id/index.html
+++ b/public/stage/_index.id/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB" dir="ltr">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <!-- head.html --><!-- meta.html -->
 
 <meta charset="utf-8">
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fase | MUKIMASTA</title>
 <meta name="author" content="Hanlin Xue">
-<link rel="canonical" href="https://mukimasta.github.io/stage/_index.id/">
-<link rel="alternate" hreflang="en" href="https://mukimasta.github.io/stage/" title="English">
+<link rel="canonical" href="http://localhost:1313/stage/_index.id/">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/stage/" title="English">
 
 
     
@@ -24,17 +24,16 @@
     <meta property="og:title" content="Fase | MUKIMASTA" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://mukimasta.github.io/stage/_index.id/" />
+    <meta property="og:url" content="http://localhost:1313/stage/_index.id/" />
         <meta property="og:image" content="https://repository-images.githubusercontent.com/923527728/46a32a19-69ac-45b3-91a4-c4d299fb234b" />
     <meta property="og:site_name" content="MUKIMASTA" />
     <!-- js.html -->
 
-<script src="https://mukimasta.github.io/js/hugo-brewm.min.js"
-            integrity="sha384-jKedt60L0oLjg994ZTQgXiusosMZ9jG0hLEeUgrIqtEDG1EeiRGtIonB53&#43;MN1/L" crossorigin="anonymous"
-            defer></script><!-- css.html -->
+
+    <script src="http://localhost:1313/js/hugo-brewm.min.js" defer></script><!-- css.html -->
 
 
-        <link rel="stylesheet" href="https://mukimasta.github.io/css/hugo-brewm.min.css" integrity="sha256-sDGyI6a8DWJLql25Q4kfln2H0EuHq3Z94ohyWOGvesA=" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://localhost:1313/css/hugo-brewm.min.css">
 
 
 
@@ -62,7 +61,7 @@
     
     <!-- logo.html -->
     <div id="logo">
-        <a href="https://mukimasta.github.io/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
+        <a href="http://localhost:1313/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
                         <text id="logotype__text" y="19.5pt" x="0">MUKIMASTA</text>
                     </svg>
         </a>
@@ -108,7 +107,7 @@
             <!-- i18n.html -->
             <nav id="bi18n" aria-label="Language Selections">
                 <a id="has-i18n" class="on-deck"
-                    href="https://mukimasta.github.io/zh/"
+                    href="http://localhost:1313/zh/"
                     aria-label="Switch Language to Chinese"
                     aria-description="Current Language is English">
                     <span class="emoji">🇨🇳&nbsp;</span>
@@ -168,7 +167,7 @@
     </details>
         </li>
         <li>
-            <a href="https://mukimasta.github.io/stage/" aria-current="true">Stage
+            <a href="http://localhost:1313/stage/" aria-current="true">Stage
             </a>
         </li>
     <li>
@@ -215,8 +214,8 @@
         <!-- mastodon.html -->
     <form class="form" id="mastodon" action="//sharetomastodon.github.io/" target="_blank" rel="noopener noreferrer">
         <input id="mastodonTitle" type="hidden" name="title" value="Fase">
-        <input id="mastodonPermalink" type="hidden" name="url" value="https://mukimasta.github.io/stage/_index.id/">
-        <input id="mastodonText" type="hidden" name="text" value="Fase https://mukimasta.github.io/stage/_index.id/" disabled>
+        <input id="mastodonPermalink" type="hidden" name="url" value="http://localhost:1313/stage/_index.id/">
+        <input id="mastodonText" type="hidden" name="text" value="Fase http://localhost:1313/stage/_index.id/" disabled>
         <input id="mastodonInstance" type="url" class="ldots form__input" placeholder="Enter Mastodon instance (https://www.example.com)" aria-label="Mastodon instance URL">
         <button class="form__button" type="submit" aria-label="Share on Mastodon">
             <i class="icon mastodon sri" aria-hidden="true"></i>
@@ -225,89 +224,89 @@
     </form>
     </li>
     <li>
-        <a href="mailto:?subject=Fase&body=https%3a%2f%2fmukimasta.github.io%2fstage%2f_index.id%2f" role="button" aria-label="Share on Email">
+        <a href="mailto:?subject=Fase&body=http%3a%2f%2flocalhost%3a1313%2fstage%2f_index.id%2f" role="button" aria-label="Share on Email">
             <i class="email sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Email</span>
         </a>
     </li>
     <li>
-        <a href="whatsapp://send?text=Fase%20https%3a%2f%2fmukimasta.github.io%2fstage%2f_index.id%2f" role="button" aria-label="Share on Whatsapp">
+        <a href="whatsapp://send?text=Fase%20http%3a%2f%2flocalhost%3a1313%2fstage%2f_index.id%2f" role="button" aria-label="Share on Whatsapp">
             <i class="whatsapp sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Whatsapp</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://telegram.me/share/url?text=Fase&amp;url=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://telegram.me/share/url?text=Fase&amp;url=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Telegram in new tab">
             <i class="telegram sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Telegram</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://bsky.app/intent/compose?text=Fase&amp;url=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://bsky.app/intent/compose?text=Fase&amp;url=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Bluesky in new tab">
             <i class="bluesky sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Bluesky</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://facebook.com/sharer/sharer.php?u=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://facebook.com/sharer/sharer.php?u=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Facebook in new tab">
             <i class="facebook sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Facebook</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://news.ycombinator.com/submitlink?u=https://mukimasta.github.io/stage/_index.id/&amp;t=Fase" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://news.ycombinator.com/submitlink?u=http://localhost:1313/stage/_index.id/&amp;t=Fase" role="button"
             aria-label="Share on Hackernews in new tab">
             <i class="hackernews sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Hackernews</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://mukimasta.github.io/stage/_index.id/&amp;title=Fase&amp;summary=Fase&amp;source=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://localhost:1313/stage/_index.id/&amp;title=Fase&amp;summary=Fase&amp;source=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Linkedin in new tab">
             <i class="linkedin sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Linkedin</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://pinterest.com/pin/create/button/?url=https://mukimasta.github.io/stage/_index.id/&amp;media=https://mukimasta.github.io/stage/_index.id/&amp;description=Fase" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://pinterest.com/pin/create/button/?url=http://localhost:1313/stage/_index.id/&amp;media=http://localhost:1313/stage/_index.id/&amp;description=Fase" role="button"
             aria-label="Share on Pinterest in new tab">
             <i class="pinterest sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Pinterest</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://reddit.com/submit/?url=https://mukimasta.github.io/stage/_index.id/&amp;resubmit=true&amp;title=Fase" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://reddit.com/submit/?url=http://localhost:1313/stage/_index.id/&amp;resubmit=true&amp;title=Fase" role="button"
             aria-label="Share on Reddit in new tab">
             <i class="reddit sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Reddit</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=Fase&amp;caption=Fase&amp;content=https://mukimasta.github.io/stage/_index.id/&amp;canonicalUrl=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=Fase&amp;caption=Fase&amp;content=http://localhost:1313/stage/_index.id/&amp;canonicalUrl=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Tumblr in new tab">
             <i class="tumblr sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Tumblr</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://threads.net/intent/post?text=Fase&amp;url=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://threads.net/intent/post?text=Fase&amp;url=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Threads in new tab">
             <i class="threads sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Threads</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/intent/tweet/?text=Fase&amp;url=https://mukimasta.github.io/stage/_index.id/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/intent/tweet/?text=Fase&amp;url=http://localhost:1313/stage/_index.id/" role="button"
             aria-label="Share on Twitter in new tab">
             <i class="twitter sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Twitter</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.xing.com/app/user?op=share;url=https://mukimasta.github.io/stage/_index.id/;title=Fase" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.xing.com/app/user?op=share;url=http://localhost:1313/stage/_index.id/;title=Fase" role="button"
             aria-label="Share on Xing in new tab">
             <i class="xing sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Xing</span>
