update css and update a blog

--- a/public/stage/seedling/index.html
+++ b/public/stage/seedling/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <!-- head.html --><!-- meta.html -->
 
 <meta charset="utf-8">
@@ -9,8 +9,8 @@
 <title>seedling | MUKIMASTA</title>
 <meta name="author" content="Hanlin Xue">
 <meta name="description" content="term | MUKIMASTA" >
-<link rel="canonical" href="http://localhost:1313/stage/seedling/">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/stage/seedling/_index.id/" title="English">
+<link rel="canonical" href="https://mukimasta.github.io/stage/seedling/">
+<link rel="alternate" hreflang="en" href="https://mukimasta.github.io/stage/seedling/_index.id/" title="English">
 
 
     
@@ -25,17 +25,18 @@
     <meta property="og:title" content="seedling | MUKIMASTA" />
     <meta property="og:description" content="term | MUKIMASTA" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://localhost:1313/stage/seedling/" />
+    <meta property="og:url" content="https://mukimasta.github.io/stage/seedling/" />
         <meta property="og:image" content="https://repository-images.githubusercontent.com/923527728/46a32a19-69ac-45b3-91a4-c4d299fb234b" />
     <meta property="og:site_name" content="MUKIMASTA" />
-    <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/stage/seedling/index.xml" title="seedling | MUKIMASTA (RSS)" />
+    <link rel="alternate" type="application/rss+xml" href="https://mukimasta.github.io/stage/seedling/index.xml" title="seedling | MUKIMASTA (RSS)" />
     <!-- js.html -->
 
+<script src="https://mukimasta.github.io/js/hugo-brewm.min.js"
+            integrity="sha384-jKedt60L0oLjg994ZTQgXiusosMZ9jG0hLEeUgrIqtEDG1EeiRGtIonB53&#43;MN1/L" crossorigin="anonymous"
+            defer></script><!-- css.html -->
 
-    <script src="http://localhost:1313/js/hugo-brewm.min.js" defer></script><!-- css.html -->
 
-
-    <link rel="stylesheet" href="http://localhost:1313/css/hugo-brewm.min.css">
+        <link rel="stylesheet" href="https://mukimasta.github.io/css/hugo-brewm.min.css" integrity="sha256-gFiUoibTEDX5OViwJznnd1mij0QhN5efXiJdNMZ4GF8=" crossorigin="anonymous">
 
 
 
@@ -63,7 +64,7 @@
     
     <!-- logo.html -->
     <div id="logo">
-        <a href="http://localhost:1313/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
+        <a href="https://mukimasta.github.io/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
                         <text id="logotype__text" y="19.5pt" x="0">MUKIMASTA</text>
                     </svg>
         </a>
@@ -109,7 +110,7 @@
             <!-- i18n.html -->
             <nav id="bi18n" aria-label="Language Selections">
                 <a id="has-i18n" class="on-deck"
-                    href="http://localhost:1313/zh/"
+                    href="https://mukimasta.github.io/zh/"
                     aria-label="Switch Language to Chinese"
                     aria-description="Current Language is English">
                     <span class="emoji">🇨🇳&nbsp;</span>
@@ -135,7 +136,7 @@
                         data-i18n-copy="Copy URL"
                         data-i18n-copying="Copying...">
                             <li>
-                                <a id="rss-button" href="http://localhost:1313/stage/seedling/index.xml" title="Follow with RSS" role="button" aria-label="Follow with RSS">
+                                <a id="rss-button" href="https://mukimasta.github.io/stage/seedling/index.xml" title="Follow with RSS" role="button" aria-label="Follow with RSS">
                                     <span class="t srt" role="tooltip">Follow with RSS</span>
                                 </a>
                             </li>
@@ -170,7 +171,7 @@
     </details>
         </li>
         <li>
-            <a href="http://localhost:1313/stage/" aria-current="true">Stage
+            <a href="https://mukimasta.github.io/stage/" aria-current="true">Stage
             </a>
         </li>
     <li>
