--- a/public/footer-link/index.html
+++ b/public/footer-link/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-GB" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <!-- head.html -->
-    <title>http://localhost:1313/404.html</title>
-    <link rel="canonical" href="http://localhost:1313/404.html">
+    <title>https://mukimasta.github.io/404.html</title>
+    <link rel="canonical" href="https://mukimasta.github.io/404.html">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/404.html" />
+    <meta http-equiv="refresh" content="0; url=https://mukimasta.github.io/404.html" />
     
 </head>
 </html>
