--- a/public/projects/autonomous-driving-system/index.html
+++ b/public/projects/autonomous-driving-system/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <!-- head.html --><!-- meta.html -->
 
 <meta charset="utf-8">
@@ -9,7 +9,7 @@
 <title>Autonomous Driving System | MUKIMASTA</title>
 <meta name="author" content="Hanlin Xue">
 <meta name="description" content="This project is a three-month effort to build a self-driving system that works end-to-end on a real mini car. " >
-<link rel="canonical" href="http://localhost:1313/projects/autonomous-driving-system/">
+<link rel="canonical" href="https://mukimasta.github.io/projects/autonomous-driving-system/">
 
 
 
@@ -19,22 +19,23 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Autonomous Driving System | MUKIMASTA" />
     <meta name="twitter:description" content="This project is a three-month effort to build a self-driving system that works end-to-end on a real mini car. " />
-        <meta name="twitter:image" content="http://localhost:1313/projects/autonomous-driving-system/images/obstacle_avoidance.gif" />
+        <meta name="twitter:image" content="https://mukimasta.github.io/projects/autonomous-driving-system/images/obstacle_avoidance.gif" />
     
     <!-- openGraph -->
     <meta property="og:title" content="Autonomous Driving System | MUKIMASTA" />
     <meta property="og:description" content="This project is a three-month effort to build a self-driving system that works end-to-end on a real mini car. " />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://localhost:1313/projects/autonomous-driving-system/" />
-        <meta property="og:image" content="http://localhost:1313/projects/autonomous-driving-system/images/obstacle_avoidance.gif" />
+    <meta property="og:url" content="https://mukimasta.github.io/projects/autonomous-driving-system/" />
+        <meta property="og:image" content="https://mukimasta.github.io/projects/autonomous-driving-system/images/obstacle_avoidance.gif" />
     <meta property="og:site_name" content="MUKIMASTA" />
     <!-- js.html -->
 
+<script src="https://mukimasta.github.io/js/hugo-brewm.min.js"
+            integrity="sha384-jKedt60L0oLjg994ZTQgXiusosMZ9jG0hLEeUgrIqtEDG1EeiRGtIonB53&#43;MN1/L" crossorigin="anonymous"
+            defer></script><!-- css.html -->
 
-    <script src="http://localhost:1313/js/hugo-brewm.min.js" defer></script><!-- css.html -->
 
-
-    <link rel="stylesheet" href="http://localhost:1313/css/hugo-brewm.min.css">
+        <link rel="stylesheet" href="https://mukimasta.github.io/css/hugo-brewm.min.css" integrity="sha256-gFiUoibTEDX5OViwJznnd1mij0QhN5efXiJdNMZ4GF8=" crossorigin="anonymous">
 
 
 
@@ -62,7 +63,7 @@
     
     <!-- logo.html -->
     <div id="logo">
-        <a href="http://localhost:1313/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
+        <a href="https://mukimasta.github.io/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
                         <text id="logotype__text" y="19.5pt" x="0">MUKIMASTA</text>
                     </svg>
         </a>
@@ -108,7 +109,7 @@
             <!-- i18n.html -->
             <nav id="bi18n" aria-label="Language Selections">
                 <a id="has-i18n" class="on-deck"
-                    href="http://localhost:1313/zh/"
+                    href="https://mukimasta.github.io/zh/"
                     aria-label="Switch Language to Chinese"
                     aria-description="Current Language is English">
                     <span class="emoji">🇨🇳&nbsp;</span>
@@ -149,7 +150,7 @@
             <ul role="presentation" class="breadcrumb ">
                     <!-- breadcrumb.html -->
         <li>
-            <a href="http://localhost:1313/projects/" aria-current="true">Projects
+            <a href="https://mukimasta.github.io/projects/" aria-current="true">Projects
             </a>
         </li>
     <li>
@@ -361,8 +362,8 @@ Watching the car succeed, get stuck, and gradually run better over time was the 
         <!-- mastodon.html -->
     <form class="form" id="mastodon" action="//sharetomastodon.github.io/" target="_blank" rel="noopener noreferrer">
         <input id="mastodonTitle" type="hidden" name="title" value="Autonomous Driving System">
-        <input id="mastodonPermalink" type="hidden" name="url" value="http://localhost:1313/projects/autonomous-driving-system/">
-        <input id="mastodonText" type="hidden" name="text" value="Autonomous Driving System http://localhost:1313/projects/autonomous-driving-system/" disabled>
+        <input id="mastodonPermalink" type="hidden" name="url" value="https://mukimasta.github.io/projects/autonomous-driving-system/">
+        <input id="mastodonText" type="hidden" name="text" value="Autonomous Driving System https://mukimasta.github.io/projects/autonomous-driving-system/" disabled>
         <input id="mastodonInstance" type="url" class="ldots form__input" placeholder="Enter Mastodon instance (https://www.example.com)" aria-label="Mastodon instance URL">
         <button class="form__button" type="submit" aria-label="Share on Mastodon">
             <i class="icon mastodon sri" aria-hidden="true"></i>
@@ -371,89 +372,89 @@ Watching the car succeed, get stuck, and gradually run better over time was the 
     </form>
     </li>
     <li>
-        <a href="mailto:?subject=Autonomous%20Driving%20System&body=http%3a%2f%2flocalhost%3a1313%2fprojects%2fautonomous-driving-system%2f" role="button" aria-label="Share on Email">
+        <a href="mailto:?subject=Autonomous%20Driving%20System&body=https%3a%2f%2fmukimasta.github.io%2fprojects%2fautonomous-driving-system%2f" role="button" aria-label="Share on Email">
             <i class="email sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Email</span>
         </a>
     </li>
     <li>
-        <a href="whatsapp://send?text=Autonomous%20Driving%20System%20http%3a%2f%2flocalhost%3a1313%2fprojects%2fautonomous-driving-system%2f" role="button" aria-label="Share on Whatsapp">
+        <a href="whatsapp://send?text=Autonomous%20Driving%20System%20https%3a%2f%2fmukimasta.github.io%2fprojects%2fautonomous-driving-system%2f" role="button" aria-label="Share on Whatsapp">
             <i class="whatsapp sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Whatsapp</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://telegram.me/share/url?text=Autonomous%20Driving%20System&amp;url=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://telegram.me/share/url?text=Autonomous%20Driving%20System&amp;url=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Telegram in new tab">
             <i class="telegram sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Telegram</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://bsky.app/intent/compose?text=Autonomous%20Driving%20System&amp;url=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://bsky.app/intent/compose?text=Autonomous%20Driving%20System&amp;url=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Bluesky in new tab">
             <i class="bluesky sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Bluesky</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://facebook.com/sharer/sharer.php?u=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://facebook.com/sharer/sharer.php?u=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Facebook in new tab">
             <i class="facebook sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Facebook</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://news.ycombinator.com/submitlink?u=http://localhost:1313/projects/autonomous-driving-system/&amp;t=Autonomous%20Driving%20System" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://news.ycombinator.com/submitlink?u=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;t=Autonomous%20Driving%20System" role="button"
             aria-label="Share on Hackernews in new tab">
             <i class="hackernews sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Hackernews</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://localhost:1313/projects/autonomous-driving-system/&amp;title=Autonomous%20Driving%20System&amp;summary=Autonomous%20Driving%20System&amp;source=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;title=Autonomous%20Driving%20System&amp;summary=Autonomous%20Driving%20System&amp;source=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Linkedin in new tab">
             <i class="linkedin sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Linkedin</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://pinterest.com/pin/create/button/?url=http://localhost:1313/projects/autonomous-driving-system/&amp;media=http://localhost:1313/projects/autonomous-driving-system/&amp;description=Autonomous%20Driving%20System" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://pinterest.com/pin/create/button/?url=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;media=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;description=Autonomous%20Driving%20System" role="button"
             aria-label="Share on Pinterest in new tab">
             <i class="pinterest sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Pinterest</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://reddit.com/submit/?url=http://localhost:1313/projects/autonomous-driving-system/&amp;resubmit=true&amp;title=Autonomous%20Driving%20System" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://reddit.com/submit/?url=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;resubmit=true&amp;title=Autonomous%20Driving%20System" role="button"
             aria-label="Share on Reddit in new tab">
             <i class="reddit sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Reddit</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=Autonomous%20Driving%20System&amp;caption=Autonomous%20Driving%20System&amp;content=http://localhost:1313/projects/autonomous-driving-system/&amp;canonicalUrl=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=Autonomous%20Driving%20System&amp;caption=Autonomous%20Driving%20System&amp;content=https://mukimasta.github.io/projects/autonomous-driving-system/&amp;canonicalUrl=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Tumblr in new tab">
             <i class="tumblr sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Tumblr</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://threads.net/intent/post?text=Autonomous%20Driving%20System&amp;url=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://threads.net/intent/post?text=Autonomous%20Driving%20System&amp;url=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Threads in new tab">
             <i class="threads sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Threads</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/intent/tweet/?text=Autonomous%20Driving%20System&amp;url=http://localhost:1313/projects/autonomous-driving-system/" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/intent/tweet/?text=Autonomous%20Driving%20System&amp;url=https://mukimasta.github.io/projects/autonomous-driving-system/" role="button"
             aria-label="Share on Twitter in new tab">
             <i class="twitter sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Twitter</span>
         </a>
     </li>
     <li>
-        <a rel="noopener noreferrer" target="_blank" href="https://www.xing.com/app/user?op=share;url=http://localhost:1313/projects/autonomous-driving-system/;title=Autonomous%20Driving%20System" role="button"
+        <a rel="noopener noreferrer" target="_blank" href="https://www.xing.com/app/user?op=share;url=https://mukimasta.github.io/projects/autonomous-driving-system/;title=Autonomous%20Driving%20System" role="button"
             aria-label="Share on Xing in new tab">
             <i class="xing sri" aria-hidden="true"></i>
             <span class="t srt" role="tooltip">Share on Xing</span>
