--- a/public/zh/404.html
+++ b/public/zh/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
-    <meta http-equiv="refresh" content="15;url=http://localhost:1313/zh/">
+    <meta http-equiv="refresh" content="15;url=https://mukimasta.github.io/zh/">
     <!-- css.html -->
 
 
-    <link rel="stylesheet" href="http://localhost:1313/css/hugo-brewm.min.css">
+        <link rel="stylesheet" href="https://mukimasta.github.io/css/hugo-brewm.min.css" integrity="sha256-gFiUoibTEDX5OViwJznnd1mij0QhN5efXiJdNMZ4GF8=" crossorigin="anonymous">
 
 
 <style>
@@ -33,7 +33,7 @@
     
     <!-- logo.html -->
     <div id="logo">
-        <a href="http://localhost:1313/zh/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
+        <a href="https://mukimasta.github.io/zh/" aria-label="MUKIMASTA" aria-description="Homepage"><svg id="logotype" xmlns="http://www.w3.org/2000/svg" version="1.1" width="252pt" aria-label="MUKIMASTA">
                         <text id="logotype__text" y="19.5pt" x="0">MUKIMASTA</text>
                     </svg>
         </a>
@@ -71,7 +71,7 @@
             <!-- i18n.html -->
             <nav id="bi18n" aria-label="Language Selections">
                 <a id="has-i18n" class="on-deck"
-                    href="http://localhost:1313/"
+                    href="https://mukimasta.github.io/"
                     aria-label="Switch Language to English"
                     aria-description="Current Language is Chinese">
                     <span class="emoji">🇬🇧&nbsp;</span>
